Added window resize support

--- a/src/website/views/index.pug
+++ b/src/website/views/index.pug
@@ -4,7 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title View
+
+        title="View"
+
         script(src="/static/js/modules/socket.io-3.1.3.min.js")
         script(src="/static/js/modules/jquery-3.6.0.min.js")
 
@@ -14,27 +16,13 @@ html(lang="en")
             window.socket = io();
 
     body()
-        nav(class="navbar is-dark")
-            div(class="navbar-menu")
-                div(class="navbar-start")
-                    a(class="navbar-item", id="web_browser_navigation_go_back", data-navigation-action="go_back")
-                        img(src="/static/img/left.png")
-                    a(class="navbar-item", id="web_browser_navigation_go_forward", data-navigation-action="go_forward")
-                        img(src="/static/img/right.png")
-                    a(class="navbar-item", id="web_browser_navigation_reload", data-navigation-action="reload")
-                        img(src="/static/img/recurring-appointment.png")
-                    a(class="navbar-item", id="web_browser_navigation_go_home")
-                        img(src="/static/img/home.png")
-                div(class="navbar-item")
-                    form(id="web_browser_url_bar_form", method="get", action="/")
-                        input(class="input is-darker", id="web_browser_url_bar", name="url")
-
-                div(class="navbar-end")
-                    label(class="navbar-item", id="status")="Status: Unknown"
+        include ./partials/navbar
 
         div(id="web_browser")
             img(id="screen")
         script(defer, src="/static/js/index.js")
+
+        input(id="file_upload", style="display: none;", type="file", name="file")
 
         style.
             .is-dark {
