Little change (by advice) seems to improve the fps

--- a/src/website/views/partials/navbar.pug
+++ b/src/website/views/partials/navbar.pug
@@ -15,3 +15,10 @@ nav(class="navbar is-dark")
 
         div(class="navbar-end")
             label(class="navbar-item", id="status")="Status: Unknown"
+
+
+style.
+    /*.navbar, .navbar-end, .navbar-menu, .navbar-start {*/
+    /*    !*align-items: stretch;*!*/
+    /*    display: flex !important;*/
+    /*}*/
